[AMQ-8282] Migrate from deprecated .newInstance() calls to .getConstructors().newInstance