@@ -259,7 +259,7 @@ public class Main {
             Method runTask = task.getMethod("main", new Class[] {
                 String[].class, InputStream.class, PrintStream.class
             });
-            return (int)runTask.invoke(task.newInstance(), args, System.in, System.out);
+            return (int)runTask.invoke(task.getConstructor().newInstance(), args, System.in, System.out);
         } catch (InvocationTargetException e) {
             throw e.getCause();
         }
